# e-ai_python_ml_tutorial

./: .gitignore  README.md  e-ai_tutorial_packages.tex  main.tex
chapters/: ai_centre_graphics.tex  ch00.tex  ch01.tex  ch02.tex  ch03.tex  ch04.tex  ch05.tex  ch06.tex  ch07.tex  ch08.tex  ch09.tex  ch10.tex  ch11.tex  ch12.tex  ch13.tex  ch14.tex  ch15.tex  ch16.tex  ch17.tex  ch18.tex  gen_chapters.sh  gpu.tex  graph_structure.tex  langgraph_weatherforecast.tex
code/code01/: earth-system-simulation.py  environment_testing.ipynb  greetings.py  install_demo_test_script.py  lorenz63-seaborn.py  lorenz63.py  main_greetings.py  plot-gaussian-modulated-cosine-field.py  plot-sine-wave.py  plot_3d-surface.py  python_basics_1_setup_import.ipynb  python_basics_2_numpy.ipynb  python_basics_3_plotting.ipynb  python_basics_4_control_io.ipynb  python_basics_5_oop_standard_libs.ipynb  reload_demo.py  reload_demo_fkt.py  requirements.txt
code/code02/: flask_api_tests.ipynb  flask_server_frontend_client.py  flask_server_request_api.py  fortran_API_example.ipynb
code/code03/: download_latest_grib_definition_dwd.py  dwd_open_data_server.ipynb  eccodes_definitions.edzw-2.36.0-2.tar.bz2  eccodes_inspect_file.ipynb  icon_global_icosahedral_single-level_2025040500_000_T_2M.grib2.bz2  icon_global_icosahedral_time-invariant_2025040500_CLAT.grib2.bz2  icon_grid_get.py  icon_triangulation.ipynb  netcdf.ipynb  (+2 more)
code/install_demo02/: README.md  pyproject.toml
code/install_demo02/src/install_demo02/: __init__.py  install_mod1.py  install_mod2.py
scripts/: gitall.sh
test/: test.tex
(+238 files in other folders)
