# This is a comment line

[build-system]
requires = [ "setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "install_demo02"
version = "0.1.3"

description = "A simple Python package with greeting functions"

#license = { file = "LICENSE" }
authors = [
  { name = "Roland Potthast", email = "Roland.Potthast@dwd.de" },
]

requires-python = ">=3.8"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
]

#dependencies = [ # Use this instead of requirements.txt
#  "numpy<2",
#  "matplotlib",
#]

#optional-dependencies.test = [ "pytest" ] # Automatically installed with `pip install install_demo02/[test]`

[tool.setuptools.packages.find]
where = ["src"]
